--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "add": "^2.0.6",
     "daisyui": "^2.51.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
